[package]

	name    = "ekke_systemd"
	version = "0.1.0"
	authors = [ "Naja Melan <najamelan@autistici.org>" ]
	edition = "2018"

[dependencies]

	ekke_core = { path = "../../ekke_core" }
	ekke_io   = { path = "../../ekke_io"   }


	actix = "0.7.9"

	serde             = "~1.0.87"
	serde_cbor        = "~0.9.0"

	slog              = { version = "~2.4.1", features = ["max_level_trace", "release_max_level_warn"] }


	tokio             = { version = "0.1.15", features = ["async-await-preview"] }
	tokio-async-await = "0.1.5"
	tokio-serde-cbor  = "0.3.1"
	tokio-uds         = "0.2.5"

[dependencies.futures-util-preview]

	default-features = false
	features         = ["tokio-compat"]
	version          = "0.3.0-alpha.12"
